<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">알람봇</string>
    <string name="tab_alarm">알람</string>
    <string name="tab_todo">할일</string>
    <string name="tab_settings">설정</string>
    <string name="switch_to_timer">타이머로 바꾸기</string>
    <string name="switch_to_alarm">알람으로 바꾸기</string>
    <string name="add_alarm">알람 추가</string>
    <string name="edit_alarm">알람 편집</string>
    <string name="empty_alarms">등록된 알람이 없습니다</string>
    <string name="todo_placeholder">할일 탭은 다음에 구현합니다</string>
    <string name="timer_placeholder">타이머는 다음에 구현합니다</string>
    <string name="voice_section">모닝콜 목소리</string>
    <string name="voice_iu">21세기대군부인아이유</string>
    <string name="dismiss_alarm">알람 끄기</string>
    <string name="alarm_channel_name">알람</string>
    <string name="alarm_ringing">알람이 울리는 중</string>
    <string name="save">저장</string>
    <string name="cancel">취소</string>
    <string name="label_optional">알람 이름</string>
    <string name="enabled">사용</string>
    <string name="delete">삭제</string>
    <string name="repeat">반복</string>
    <string name="once">한번만</string>
    <string name="every_day">매일</string>
    <string name="weekdays">주중</string>
    <string name="weekend">주말</string>
    <string name="day_mon">월</string>
    <string name="day_tue">화</string>
    <string name="day_wed">수</string>
    <string name="day_thu">목</string>
    <string name="day_fri">금</string>
    <string name="day_sat">토</string>
    <string name="day_sun">일</string>
    <string name="preset_once">한번만</string>
    <string name="preset_everyday">매일</string>
    <string name="preset_weekdays">주중</string>
    <string name="preset_weekend">주말</string>
    <string name="voice_alarm_set">알람봇에 등록됨: %1$s</string>
    <string name="voice_add_alarm">말로 알람 등록</string>
    <string name="voice_add_hint">예: 내일 아침 7시 / 매일 7시 / 수요일 오전 9시 / 3시간 뒤</string>
    <string name="voice_listening">말씀해 주세요</string>
    <string name="voice_parse_fail">알아듣지 못했습니다. 다시 말해 주세요</string>
    <string name="voice_need_mic">마이크 권한이 필요합니다</string>
    <string name="overlay_title">알람 화면 권한 필요</string>
    <string name="overlay_message">앱이 백그라운드에 있을 때도 알람 끄기 화면이 바로 뜨려면 \'다른 앱 위에 표시\' 권한이 필요합니다.\n\n다음 화면에서 알람봇을 켜 주세요.</string>
    <string name="overlay_open">설정 열기</string>
    <string name="overlay_later">나중에</string>
    <string name="permission_section">알람 권한</string>
    <string name="permission_check">알람 화면 권한 확인</string>
    <string name="permission_ok">권한이 모두 허용되어 있습니다</string>
    <string name="battery_title">배터리 최적화 해제</string>
    <string name="battery_message">삼성 등 일부 기기는 배터리 절약 때문에 알람 앱을 강제로 잠재웁니다.\n\n알람봇을 \'제한 없음\'으로 설정해 주세요.</string>
</resources>
